Done this game with minimal features

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="subtitles">Subtitle</div>
+    <div class="board">
+        <div class="cell">X</div>
+        <div class="cell">O</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+    </div>
+    <button class="restart">Restart</button>
     <script src="script.js"></script>
 </body>
 </html>
